# rjp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: add_fields.rs  builders.rs  drop_fields.rs  extract_items.rs  join.rs  json_lines_formatter.rs  lib.rs  main.rs  main_worker.rs  merge.rs  output_tsv.rs  parse_json.rs  rename_fields.rs  select_fields.rs  test.rs  to_number.rs  tsv_to_json.rs  txt_to_json.rs  types.rs  util.rs
src/pipeline/: mod.rs  output_json.rs  parse_json.rs  tsv_to_json.rs  txt_to_json.rs
src/processor/: add_fields.rs  drop_fields.rs  extract_items.rs  join.rs  mod.rs  rename_fields.rs  select_fields.rs  to_number.rs
tests/: a.json  a_join_b_output.json  b.json  c.json  c_index_output.json
tests/test_0/: command
tests/test_1/: command
