[package]
name = "rjp"
version = "0.1.0"
authors = ["Ales Tamchyna <ales.tamchyna@memsource.com>"]
edition = "2021"

[dependencies]
fxhash = "0.2.1"
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.61"
termination = "0.1.2"
clap = { version = "3.0.0", features = ["derive"] }

# [profile.release]
# debug = 1

